# openclaw

./: .agent-status.json  .antigravityignore  .artifacts  .autochain_runtime_fix_prompt.md  .claudeignore  .coderabbit.yaml  .codex  .commitlintrc.json  .crabbox.yaml  .dependency-cruiser.mjs  .deployed-commit  .detect-secrets.cfg  .dockerignore  .editorconfig  .env  .env.bodhi1.example  .env.bots.example  .env.coolify.example  .env.enc  .env.example  .env.finance.example  .env.local  .env.local.runtime.example  .env.mac  .env.saved  .env.unraid.example  .env.var  .env.win  .envrc  .gcloudignore  .gitattributes  .github-pr-body-45080.md  .gitignore  .gitleaks.toml  .gitmodules  .graphifyignore  .last-pr-check.json  .lefthook.yml  .logos-prepared.json  .mailmap  (+1454 more)
GATEWAY-RS/: Cargo.toml
GATEWAY-RS/src/: auth.rs  http.rs  main.rs  registry.rs  state.rs  tasks.rs
GATEWAY-RS/src/handlers/: agent.rs  channels.rs  chat.rs  config.rs  health.rs  mod.rs  models.rs  nodes.rs  secrets.rs  sessions.rs  skills.rs  tasks.rs  tools.rs
GATEWAY-RS/src/llm/: mod.rs
GATEWAY-RS/src/models/: config.rs  protocol.rs
GATEWAY-RS/src/sessions/: manager.rs  mod.rs  store.rs  types.rs
GATEWAY-RS/transcripts/: test_session.jsonl
agents/b-fia/: .env.example  pyproject.toml
agents/b-fia/tests/: test_orchestrator.py
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/linux/: Cargo.toml  README.md  ai.openclaw.Companion.desktop  index.html  meson.build  package.json  tauri.conf.json
apps/linux-gtk/: Cargo.toml  README.md
apps/linux-gtk/data/: ai.openclaw.desktop.desktop  ai.openclaw.desktop.metainfo.xml  style.css
apps/linux/src/: App.tsx  app_restart.c  app_restart.h  app_window.c  app_window.h  app_window_section_tag.c  browser_control_state.c  browser_control_state.h  chat_blocks.c  chat_blocks.h  chat_controller.c  chat_controller.h  chat_window.c  chat_window.h  commands.rs  config_browser_toggle.c  config_browser_toggle.h  config_setup_transform.c  config_setup_transform.h  connection_mode_coordinator.c  connection_mode_coordinator.h  connection_mode_resolver.c  connection_mode_resolver.h  debug_actions.c  debug_actions.h  deep_link.c  deep_link.h  device_auth_store.c  device_auth_store.h  device_identity.c  device_identity.h  device_pair_approval_window.c  device_pair_approval_window.h  device_pair_prompter.c  device_pair_prompter.h  device_pair_request_info.c  diagnostics.c  diagnostics.h  display_model.c  display_model.h  (+140 more)
apps/linux/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/linux/tests/: test_app_restart.c  test_app_window_routing.c  (+55 more)
cli/dacien-cli/: .gitignore  Cargo.toml
cli/date-remind/: Cargo.toml
cli/syno/: .env.example  Cargo.toml  Dockerfile  OpenClaw安全体系完整分析.md  SYNO_CLI.md  ld-linux.bat  omni-shield插件分析.md  zig-ar.bat  zig-cc.bat  zig-cc.ps1  火山云ECS-OpenClaw部署分析.md
crates/: Cargo.toml  README.md
crates/mythos-a2a-protocol/: Cargo.toml
crates/mythos-causal-graph/: Cargo.toml
crates/mythos-embedding-runtime/: Cargo.toml
crates/mythos-execution-sandbox/: Cargo.toml
crates/mythos-protocol-codec/: Cargo.toml
crates/mythos-search-engine/: Cargo.toml
crates/mythos-vector-engine/: Cargo.toml
extensions/moltassist/: Cargo.toml  README.md  pyproject.toml
fd/: .env.example  AI_RULES.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
fd/tests/: conftest.py  test_agencyos_v10_audit_writer.py  test_agencyos_v11_hardening.py  test_agencyos_v12_system_health.py  test_agencyos_v13_marketing_core.py  test_agencyos_v14_revenue_os.py  test_agencyos_v3.py  test_agencyos_v4_canonical.py  test_agencyos_v5_compliance.py  test_agencyos_v6_intelligence.py  test_agencyos_v7_compliance.py  test_agencyos_v8_system.py  test_agencyos_v9_services.py  test_agencyu_ingest.py  test_agencyu_models_tags.py  test_agencyu_onboarding.py  test_agencyu_setter_campaigns.py  test_approval_card_and_mirror.py  test_attribution.py  test_calendly_webhook.py  test_capacity_override_and_approvals.py  test_cc_fix_list_and_skills_scout.py  test_cc_widgets_new.py  test_cleanup_add_comment.py  test_cleanup_autocreate_archive_list.py  test_cleanup_autocreate_label_and_apply.py  test_combo_metrics_store.py  test_command_center_widgets.py  test_db_bootstrap.py  test_ghl_client_shape.py  test_ghl_update_custom_fields_shape.py  test_ghl_webhook.py  test_ghl_webhook_board_resolution.py  test_ghl_webhook_local_map_resolution.py  test_grantops.py  test_guide.py  test_idempotency.py  test_intent.py  test_job_queue.py  test_lifecycle_cleanup_triggers.py  (+21 more)
fd/workspace/: .env.example  .gitignore  CAPABILITIES.md  CLUSTER_PHILOSOPHY.md  CONFIG.yaml  IDENTITY.md  MISSION.md  OPERATING_RULES.md  README.md  SECURITY.md  SOUL.md  __init__.py  clawdbot.json  docker-compose.yml
proxy_system/: .gitignore  progress.txt  proxy_config.yaml  pyproject.toml  requirements.txt
proxy_system/proxy_system/: __init__.py  cli.py  config.py  scraper.py
proxy_system/tests/: test_config.py  test_deactivation.py  test_imports.py  test_proxy_manager_config.py  test_rotation_bug.py
rust-agent/: .gitignore  Cargo.toml  FULL_RUST_PARITY_PLAN.md  MIGRATION_PLAN.md  OPENCLAW_FEATURE_AUDIT.md  README.md  openclaw-rs.example.toml
rust-agent/deploy/: Dockerfile.parity  Dockerfile.runtime  docker-compose.parity.yml  openclaw-agent-rs.service
rust-agent/scripts/: build-ubuntu20.sh  run-docker-parity-compose.ps1  run-docker-parity-compose.sh  run-docker-parity-smoke.ps1  run-docker-parity-smoke.sh  run-protocol-corpus.sh  run-replay-harness.sh  with-mingw-env.ps1
rust-agent/src/: bridge.rs  config.rs  gateway.rs  main.rs  memory.rs  protocol.rs  runtime.rs  scheduler.rs  session_key.rs  state.rs  types.rs
rust_core/: Cargo.toml
rust_core/src/: lib.rs  sandbox.rs
tmp/openclaw-analytics-package/: CONTRIBUTION_SUMMARY.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
weil-applet/: Cargo.toml
weil-applet/src/: lib.rs  tools.rs  types.rs
(+262985 files in other folders)
