[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agent-tts"
version = "1.0.0"
description = "Per-agent TTS voice configuration with sensible defaults"
requires-python = ">=3.10"
dependencies = [
   "pyyaml>=6.0.1",
   "click>=8.1.7",
   "fastapi>=0.111.0",
   "uvicorn>=0.30.0",
   "pydantic>=2.7.0",
   "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
agent-tts = "agent_tts.cli:cli"