[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "exec-denylist"
version = "1.0.0"
description = "Denylist support for exec approvals — block high-risk commands by pattern"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
exec-denylist = "exec_denylist.cli:main"