[package]
name = "openclaw_rust_core"
version = "0.1.0"
edition = "2021"
description = "Monty-like sandbox for safe execution of critical computational logic"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
